media burger day1

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -17,3 +17,18 @@
     font-family: 'TimesNewRomanMTStd', sans-serif;
     font-weight: 400;
 }
+
+@mixin breakpoint($point) {
+    @if $point == lg{
+        @media(max-width:992px){@content;}
+    }
+    @if $point == md{
+        @media(max-width:768px){@content;}
+    }
+    @if $point == sm{
+        @media(max-width:576px){@content;}
+    }
+    @if $point == xs{
+        @media(max-width:320px){@content;}
+    }
+}
