--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   top: 60px;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .header__inner {
@@ -139,7 +139,23 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  min-height: 52px;
+}
+
+@media (max-width: 768px) {
+  .header__inner {
+    position: fixed;
+    top: 20px;
+  }
+}
+
+.logo {
+  position: absolute;
+  z-index: 10;
 }
 
 .logo__location {
@@ -149,12 +165,138 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   color: #ffffff;
 }
 
+.menu {
+  width: 100%;
+}
+
+.menu__icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .menu__icon {
+    display: block;
+    position: absolute;
+    top: 30%;
+    right: 40px;
+    z-index: 5;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+  }
+}
+
+.menu__icon span, .menu__icon::before, .menu__icon::after {
+  position: absolute;
+  left: 0;
+  height: 10%;
+  width: 100%;
+  -webkit-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+  background-color: #ffffff;
+}
+
+.menu__icon::before, .menu__icon::after {
+  content: "";
+}
+
+.menu__icon span {
+  top: 50%;
+  -webkit-transform: scale(1) translate(0px, -50%);
+          transform: scale(1) translate(0px, -50%);
+}
+
+.menu__icon::before {
+  top: 0px;
+}
+
+.menu__icon::after {
+  bottom: 0px;
+}
+
+.menu__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+}
+
+@media (max-width: 768px) {
+  .menu__body {
+    display: block;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: fixed;
+    top: 0px;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(48, 34, 34, 0.92);
+    padding: 100px 30px 30px 30px;
+    -webkit-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+    overflow: auto;
+  }
+}
+
+.menu__body._active {
+  left: 0;
+}
+
+@media (max-width: 768px) {
+  .menu__body._active::before {
+    content: "";
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0%;
+    z-index: 2;
+    height: 90px;
+    background-color: #5c5454;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-left: 0;
+  }
+}
+
 .menu__list-item {
-  display: inline-block;
+  display: block;
 }
 
 .menu__list-item + .menu__list-item {
   margin-left: 40px;
+}
+
+@media (max-width: 992px) {
+  .menu__list-item + .menu__list-item {
+    margin-left: 25px;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu__list-item + .menu__list-item {
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu__list-item {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 }
 
 .menu__list-link {
@@ -164,6 +306,12 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   color: #cdcdcd;
   -webkit-transition: color .3s linear;
   transition: color .3s linear;
+}
+
+@media (max-width: 768px) {
+  .menu__list-link {
+    font-size: 24px;
+  }
 }
 
 .menu__list-link::after {
@@ -178,6 +326,12 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   opacity: 0;
   -webkit-transition: opacity .3s linear;
   transition: opacity .3s linear;
+}
+
+@media (max-width: 768px) {
+  .menu__list-link::after {
+    display: none;
+  }
 }
 
 .menu__list-link:hover, .menu__list-link.active {
@@ -236,7 +390,19 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
 }
 
 .about__img {
-  margin-right: 120px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 35.7%;
+          flex: 0 1 35.7%;
+}
+
+.about__img-item {
+  width: 100%;
+}
+
+.about__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50.4%;
+          flex: 0 1 50.4%;
 }
 
 .about__content-text {
@@ -388,8 +554,20 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   padding: 70px 0 80px 0;
 }
 
+.donation__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .donation__image {
-  max-width: 550px;
+  max-width: 100%;
 }
 
 .donation__content {
@@ -456,6 +634,8 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .footer__item {
