--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ body {
   margin: 0;
 }
 
+body._lock {
+  overflow: hidden;
+}
+
 .container {
   max-width: 1200px;
   padding: 0 15px;
@@ -132,6 +136,12 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   z-index: 10;
 }
 
+@media (max-width: 768px) {
+  .header {
+    top: 5px;
+  }
+}
+
 .header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -144,13 +154,6 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
           align-items: center;
   width: 100%;
   min-height: 52px;
-}
-
-@media (max-width: 768px) {
-  .header__inner {
-    position: fixed;
-    top: 20px;
-  }
 }
 
 .logo {
@@ -214,6 +217,23 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
   bottom: 0px;
 }
 
+.menu__icon._active span {
+  -webkit-transform: scale(0) translate(0px, -50%);
+          transform: scale(0) translate(0px, -50%);
+}
+
+.menu__icon._active::before {
+  top: 50%;
+  -webkit-transform: rotate(-45deg) translate(0%, -50%);
+          transform: rotate(-45deg) translate(0%, -50%);
+}
+
+.menu__icon._active::after {
+  bottom: 50%;
+  -webkit-transform: rotate(45deg) translate(0%, 50%);
+          transform: rotate(45deg) translate(0%, 50%);
+}
+
 .menu__body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -235,7 +255,7 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
     width: 100%;
     height: 100%;
     background-color: rgba(48, 34, 34, 0.92);
-    padding: 100px 30px 30px 30px;
+    padding: 80px 30px 30px 30px;
     -webkit-transition: left 0.3s ease 0s;
     transition: left 0.3s ease 0s;
     overflow: auto;
@@ -251,10 +271,10 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
     content: "";
     position: fixed;
     width: 100%;
-    top: 0;
+    top: 0px;
     left: 0%;
     z-index: 2;
-    height: 90px;
+    height: 60px;
     background-color: #5c5454;
   }
 }
@@ -273,7 +293,7 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
 }
 
 .menu__list-item {
-  display: block;
+  display: inline-block;
 }
 
 .menu__list-item + .menu__list-item {
@@ -530,6 +550,12 @@ body, .section__title, .section__btn, .top__title, .slide__name, .help__item-tex
 .help__item {
   width: 20%;
   padding: 40px 0;
+}
+
+@media (max-width: 992px) {
+  .help__item {
+    width: 25%;
+  }
 }
 
 .help__item-text {
