--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,9 @@
             height: 18px;
             cursor: pointer;
         }
+        @include breakpoint(sm){
+            right: 20px;
+        }
     }
     &__icon span,
     &__icon::before,
@@ -182,9 +185,27 @@
     background-position: top center;
     background-size: cover;
     min-height: 930px;
+    @include breakpoint(lg){
+        min-height: 750px;
+    }
+    @include breakpoint(md){
+        background-position: 25%;
+        min-height: 520px;
+    }
     &__inner{
         padding-top: 250px;
         max-width: 445px;
+        @include breakpoint(lg){
+            padding-top: 150px;
+        }
+        @include breakpoint(md){
+            margin: 0 auto;;
+            padding-top: 70px;
+            text-align: center;
+        }
+        @include breakpoint(xs){
+            padding-top: 20px;
+        }
     }
     &__title{
         @extend %sf-Georgia;
@@ -192,6 +213,9 @@
         color: #ffffff;
         line-height: 57px;
         letter-spacing: 0.06em;
+        @include breakpoint(sm){
+            font-size: 36px;
+        }
     }
     &__text{
         @extend %sf-ArialMT;
@@ -211,15 +235,35 @@
         justify-content: space-between;
         max-width: 840px;
         margin: 90px auto;
+        @include breakpoint(sm){
+            flex-direction: column;
+            margin: 20px auto;
+        }   
     }
     &__img{
+        height: 100%;
         flex: 0 1 35.7%;
+        @include breakpoint(md){
+            flex: 0 1 45%;
+        }
     }
     &__img-item{
         width: 100%;
     }
     &__content{
         flex: 0 1 50.4%;
+        @include breakpoint(md){
+            flex: 0 1 50%;
+        }
+        @include breakpoint(sm){
+            text-align: center;
+        }
+    }
+    &__title{
+        @include breakpoint(sm){
+            max-width: 100%;
+            margin-top: 30px;
+        }
     }
     &__content-text{
         margin-top: 32px;
@@ -310,10 +354,16 @@
     &__inner{
         padding: 70px 0 40px 0;
         text-align: center;
+        @include breakpoint(md){
+            padding: 40px 0 30px 0;
+        }
     }
     &__title{
         display: inline-block;
         margin-bottom: 80px;
+        @include breakpoint(lg){
+            margin-bottom: 20px;
+        }
     }
     &__content{
         display: flex;
@@ -326,7 +376,14 @@
         width: 20%;
         padding: 40px 0;
         @include breakpoint(lg){
-            width: 25%;
+            width: 33.333%;
+        }
+        @include breakpoint(sm){
+            width: 50%;
+            padding: 30px 0;
+        }
+        @include breakpoint(xs){
+            padding: 20px 0;
         }
     }
     &__item-text{
@@ -344,6 +401,9 @@
         display: flex;
         flex-direction: row;
         padding: 70px 0 80px 0;
+        @include breakpoint(md){
+            flex-direction: column;
+        }
     }
     &__item{
         display: flex;
@@ -356,6 +416,10 @@
     &__content{
         max-width: 360px;
         margin-left: 62px;
+        @include breakpoint(md){
+            margin: 20px auto;
+            text-align: center;
+        }
     }
     &__bank{
         margin: 30px 0 33px;
@@ -378,6 +442,11 @@
         font-size: 20px;
         letter-spacing: 0.06em;
         color: #292929;
+        @include breakpoint(sm){
+            max-width: 319px;
+            padding: 8px 8px 8px 50px;
+            font-size: 16px;
+        }
     }
     &__bank-number::before{
         content: "";
@@ -388,6 +457,9 @@
         top: 13px;
         left: 18px;
         background: url(../images/donation_credit_card.png);
+        @include breakpoint(sm){
+            top: 5px;
+        }
     }
     &__text{
         @extend %sf-Arial-ItalicMT;
@@ -411,9 +483,19 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
+        @include breakpoint(md){
+            padding: 40px 0 70px 0;
+        }
     }
     &__item{
         max-width: 315px;
+        @include breakpoint(md){
+            max-width: 273px;
+            margin-bottom: 15px;
+        }
+        @include breakpoint(sm){
+            max-width: 100%;
+        }
     }
     &__title{
         @extend %sf-Georgia;
@@ -421,6 +503,9 @@
         line-height: 45px;
         letter-spacing: 0.06em;
         color: #ffffff;
+        @include breakpoint(md){
+            font-size: 24px;
+        }
     }
     &__email{
         display: inline-block;
@@ -432,6 +517,13 @@
         line-height: 45px;
         letter-spacing: 0.06em;
         color: #f1cdb3;
+        @include breakpoint(md){
+            font-size: 16px;
+        }
+        @include breakpoint(sm){
+            display: block;
+            margin: 10px 0 10px 0;
+        }
     }
     &__email::before{
         content: "";
@@ -453,6 +545,9 @@
         line-height: 45px;
         letter-spacing: 0.06em;
         color: #f1cdb3;
+        @include breakpoint(md){
+            font-size: 16px;
+        }
     }
     &__tel::before{
         content: "";
@@ -475,6 +570,10 @@
         line-height: 1.2;
         letter-spacing: 0.06em;
         color: #f1cdb3;
+        @include breakpoint(md){
+            font-size: 16px;
+            margin: 15px 0 34px 0;
+        }
     }
     &__location::before{
         content: "";
